--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -6,12 +6,12 @@
     display: grid;
     gap: 0 60px;
     grid-template-columns: 1fr 1fr;
-    padding-bottom: 72px;
+    padding-bottom: 70px;
   }
 
   @include m.breakpoint(large) {
     gap: 0 80px;
-    padding-bottom: 82px;
+    padding-bottom: 84px;
   }
 }
 
@@ -87,7 +87,11 @@
 
   @include m.breakpoint(medium) {
     text-align: left;
-    margin-bottom: 0;
+    margin: 0;
+  }
+
+  @include m.breakpoint(large) {
+    margin-top: 8px;
   }
 }
 
