--- a/source/sass/blocks/show-more-card.scss
+++ b/source/sass/blocks/show-more-card.scss
@@ -14,8 +14,9 @@
   &::before {
     content: "";
     position: absolute;
-    border: 1px solid v.$color-gray-100;
     top: 0;
+    height: 1px;
+    background-color: v.$color-gray-100;
     left: calc(50% - 50vw);
     width: 100vw;
   }
@@ -23,8 +24,9 @@
   &::after {
     content: "";
     position: absolute;
-    border: 1px solid v.$color-gray-100;
     bottom: 0;
+    height: 1px;
+    background-color: v.$color-gray-100;
     left: calc(50% - 50vw);
     width: 100vw;
   }
